--- a/flask_app/templates/dojo.html
+++ b/flask_app/templates/dojo.html
@@ -14,6 +14,27 @@
    <h3>{{dojo}}</h3>
    <h3>Dojo Since {{dojo.created_at.strftime("%B %d, %Y") }}</h3>
    
+   <!-- Table Showing All Ninjas -->
+   <div class="col-6 mx-auto">
+      <table class="table table-hover">
+         <thead>
+            <tr>
+               <th>Name</th>
+               <th>Age</th>
+            </tr>
+         </thead>
+         <tbody>
+            {% for one_ninja in ninjas %}
+               <tr>
+                  <td><a href="/ninjas/{{one_ninja.id}}">{{one_ninja.first_name}} {{one_ninja.last_name}}</a></td>
+                  <td>{{one_ninja.age}}</td>
+               </tr>
+            {% endfor %}
+         </tbody>
+      </table>
+   </div>
+
+
    <a href="/dojos" class="btn btn-primary"> Back to Dojos</a>
 </body>
 </html>
