--- a/flask_app/templates/ninjas.html
+++ b/flask_app/templates/ninjas.html
@@ -12,7 +12,7 @@
    <h1>Ninjas</h1>
    <div class="shared-row">
       <!-- Table Showing All Ninjas -->
-      <div class="col-8 mx-auto">
+      <div class="col-6 mx-auto">
          <table class="table table-hover">
             <thead>
                <tr>
@@ -36,6 +36,16 @@
       <!-- Form to Create New Ninja -->
       <form action="/create/ninja" method="post" class="col-6 p-3 bg-dark text-light">
          <h2 class="text-center text-primary">New Ninja</h2>
+         
+         <div class="form-group">
+            <label for="dojo_id">Dojo:</label>
+            <select class="form-control" name="dojo_id" id="dojo">
+               {% for one_dojo in all_dojos %}
+                  <option value = {{one_dojo.id}}>{{one_dojo.name}}</option>
+               {% endfor %}
+            </select>
+          </div>
+
          <div class="form-group">
             <label for="first_name">First Name:</label>
             <input type="text" name="first_name" class="form-control">
@@ -47,10 +57,6 @@
          <div class="form-group">
             <label for="age">Age:</label>
             <input type="number" name="age" class="form-control">
-         </div>
-         <div class="form-group">
-            <label for="dojo_id">Dojo ID</label>
-            <input type="number" name="dojo_id" class="form-control">
          </div>
          <input type="submit" value="Add Ninja" class="btn btn-primary">
       </form>
