--- a/flask_app/templates/dojo.html
+++ b/flask_app/templates/dojo.html
@@ -35,6 +35,6 @@
    </div>
 
 
-   <a href="/dojos" class="btn btn-primary"> Back to Dojos</a>
+   <a href="/dojos" class="btn btn-primary centered"> Back to Dojos</a>
 </body>
 </html>
