--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -30,10 +30,12 @@
             <label for="name">Dojo Name:</label>
             <input type="text" name="name" class="form-control">
          </div>
-         <input type="submit" value="Add Dojo" class="btn btn-primary">
+         <input type="submit" value="Add Dojo" class="btn btn-primary centered">
       </form>
 </div>
-<a href="/ninjas" class="btn btn-primary"> Ninjas</a>
+<div class="center">
+   <a href="/ninjas" class="btn btn-primary"> Ninjas</a>
+</div>
    
 </body>
 </html>
